--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -20,4 +20,10 @@ jobs:
 
     - name: Build
       run: go build main.go
+    
+    - name: Upload a Build Artifact
+      uses: actions/upload-artifact@v3.1.0
+      with:
+        name: zabbix-tg-bot
+        path: ./main
 
