--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -20,6 +20,9 @@ jobs:
 
     - name: Build
       run: go build main.go
+
+    - name: test
+      run: ./main
     
     - name: Upload a Build Artifact
       uses: actions/upload-artifact@v3.1.0
