--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -11,6 +11,9 @@ jobs:
 
     steps:
 
+    - name: Check out the repo
+      uses: actions/checkout@v3
+
     - name: Log into registry
       uses: docker/login-action@v1
       with:
