--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -5,10 +5,8 @@ on:
     branches: [ "main" ]
 
 jobs:
-
-  build:
+  build-docker-image:
     runs-on: ubuntu-latest
-
     steps:
 
     - name: Check out the repo
